<resources>
    <string name="app_name">Pearl Jam Lyrics</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">Cancel</string>
    <string name="dialog_title_albumInfo">Album Info</string>
    <string-array name="feedback_email_address">
    	<item>juan.nale@gmail.com</item>    
	</string-array>
    <string name="feedback_email_subject">Pearl Jam Lyrics App: Feedback</string>
    <string name="feedback_email_alertTitle">Send Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_songList">Song List</string>
    <string name="action_albums">Albums</string>
    <string name="action_showVideo">Show Video</string>
    <string name="action_hideVideo">Hide Video</string>
    <string name="action_fontSize">Font Size</string>
    <string name="action_sendFeedback">Send Feedback</string>
    <string name="action_albumInfo">Album Info</string>
    <string name="action_font_size_small">Small</string>
    <string name="action_font_size_medium">Medium</string>
    <string name="action_font_size_large">Large</string>
    <string name="filterSong">Type to filter songs</string>
    <string name="lyricsError">The song lyrics is not available at this moment&#8230;</string>
    <string name="error_player">There was an error initializing the YouTube video</string>
    <string name="favsTitle">Favorite songs</string>
    <string name="howToAddFav">On the lists or song lyrics, press the star icon to add the song to your favorites</string>
    <string name="songAddedtoFavs">song added to favorites</string>
    <string name="songRemovedFromFavs">song removed from favorites</string>
    <string name="errorRemovingSong">error removing the song form favorites&#8230;</string>
    <string name="errorAddingSong">error adding the song to favorites&#8230;</string>
    <string name="album_image">album cover</string>
    <string name="album_info_icon">album info</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="delete_icon">delete icon</string>
    <string-array name="album_tabs">
        <item>studio</item>
		<item>singles</item>
		<item>others</item>
	</string-array>
    <string name="pref_show_video_title">Always show video</string>
    <string name="pref_show_video">Check this preference if you want to see always the video in the open state in the lyrics screen</string>
    <string name="pref_clear_favorites_title">Clear Favorites</string>
    <string name="pref_clear_favorites">Delete all the saved songs in favorites</string>
    <string name="pref_clear_favorites_alert_title">Clear favorite\'s list?</string>
    <string name="pref_clear_favorites_alert_message">You will delete all your favorites!</string>
    <string name="pref_clear_favortites_message">all favorites were deleted</string>
    <string name="pref_general">General</string>
    <string name="pref_about">About App</string>
    <string name="pref_version_number_title">App Version</string>
    <string name="pref_version_number">2.0 beta 1</string>
    <string name="pref_developed_by_title">Developed by</string>
    <string name="pref_developed_by">Juan Ignacio Nale</string>
    <string name="pref_developed_by_url">http://www.twitter.com/nachoNale</string>
    <string name="pref_rate_app">Rate App</string>
    <string name="pref_rate_app_url">http://play.google.com/store/apps/details?id=com.juannale.pearljamlyricsapp</string>
    <string name="pref_open_source_lic">Open Source Licenses</string>
    <string name="lic_alertDialog_text1">This app is built using open source software:</string>
    <string name="lic_libraries_text">- ActionBarSherlock\n\t(Copyright 2012 Jake Wharton)\n\n- ViewPagerIndicator\n
        \t(Copyright 2012 Jake Wharton)\n\t(Copyright 2011 Patrik Åkerfeldt)\n\t(Copyright 2011 Francisco Figueiredo Jr.)\n\n
        - FadingActionBar\n\t(Copyright 2013 Manuel Peinado)\n\n- ListViewAnimation\n\t(Copyright 2013 Niek Haarman)</string>
    <string name="lic_alertDialog_text2">Each of the above projects is licensed under the Apache License, Version 2.0:</string>
    <string name="lic_apache_license_text">
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
	</string>
    <string-array name="song_list">
        
        <item>Once:s1</item>
        <item>Evenflow:s2</item>
        <item>Alive:s3</item>
        <item>Why Go:s4</item>
        <item>Black:s5</item>
        <item>Jeremy:s6</item>
        <item>Oceans:s7</item>
        <item>Porch:s8</item>
        <item>Garden:s9</item>
        <item>Deep:s10</item>
        <item>Release:s11</item>
        
        <item>Go:s12</item>
        <item>Animal:s13</item>
        <item>Daughter:s14</item>
        <item>Glorified G:s15</item>
        <item>Dissident:s16</item>
        <item>W.M.A.:s17</item>
        <item>Blood:s18</item>
        <item>Rearviewmirror:s19</item>
        <item>Rats:s20</item>
        <item>Elderly Woman Behind The Counter In A Small Town:s21</item>
        <item>Leash:s22</item>
        <item>Indifference:s23</item>
        
        <item>Last Exit:s24</item>
        <item>Spin The Black Circle:s25</item>
        <item>Not For You:s26</item>
        <item>Tremor Christ:s27</item>
        <item>Nothingman:s28</item>
        <item>Whipping:s29</item>
        <item>Pry, To:s30</item>
        <item>Corduroy:s31</item>
        <item>Bugs:s32</item>
        <item>Satan\'s Bed:s33</item>
        <item>Better Man:s34</item>
        <item>Aye Davanita:s35</item>
        <item>Immortality:s36</item>
        <item>Hey Foxymophandlemama, That\'s Me:s37</item>
        
        <item>Sometimes:s38</item>
        <item>Hail, Hail:s39</item>
        <item>Who You Are:s40</item>
        <item>In My Tree:s41</item>
        <item>Smile:s42</item>
        <item>Off He Goes:s43</item>
        <item>Habit:s44</item>
        <item>Red Mosquito:s45</item>
        <item>Lukin:s46</item>
        <item>Present Tense:s47</item>
        <item>Mankind:s48</item>
        <item>I\'m Open:s49</item>
        <item>Around The Bend:s50</item>
        
        <item>Brain of J.:s51</item>
        <item>Faithfull:s52</item>
        <item>No Way:s53</item>
        <item>Given To Fly:s54</item>
        <item>Whishlist:s55</item>
        <item>Pilate:s56</item>
        <item>Do The Evolution:s57</item>
        <item>Untitled:s58</item>
        <item>MFC:s59</item>
        <item>Low Light:s60</item>
        <item>In Hiding:s61</item>
        <item>Push Me, Pull Me:s62</item>
        <item>All Those Yesterdays:s63</item>
        
        <item>Brakerfall:s64</item>
        <item>God\'s Dice:s65</item>
        <item>Evacuation:s66</item>
        <item>Light Years:s67</item>
        <item>Nothing As It Seems:s68</item>
        <item>Thin Air:s69</item>
        <item>Insignificance:s70</item>
        <item>Of The Girl:s71</item>
        <item>Grievance:s72</item>
        <item>Rival:s73</item>
        <item>Sleight Of Hand:s74</item>
        <item>Soon Forget:s75</item>
        <item>Parting Ways:s76</item>
        
        <item>Can\'t Keep:s77</item>
        <item>Save You:s78</item>
        <item>Love Boat Captain:s79</item>
        <item>Cropduster:s80</item>
        <item>Ghost:s81</item>
        <item>I Am Mine:s82</item>
        <item>Thumbing My Way:s83</item>
        <item>You Are:s84</item>
        <item>Get Right:s85</item>
        <item>Green Disease:s86</item>
        <item>Help Help:s87</item>
        <item>Bu$hleaguer:s88</item>
        <item>&#189; Full:s89</item>
        <item>Arc:s90</item>
        <item>All Or None:s91</item>
        
        <item>Life Wasted:s93</item>
        <item>World Wide Suicide:s94</item>
        <item>Comatose:s95</item>
        <item>Severed Hand:s96</item>
        <item>Marker In The Sand:s97</item>
        <item>Parachutes:s98</item>
        <item>Unemployable:s99</item>
        <item>Big Wave:s100</item>
        <item>Gone:s101</item>
        <item>Wasted Reprise:s102</item>
        <item>Army Reserve:s103</item>
        <item>Come Back:s104</item>
        <item>Inside Job:s105</item>
        
        <item>Gonna See My Friend:s106</item>
        <item>Got Some:s107</item>
        <item>The Fixer:s108</item>
        <item>Johnny Guitar:s109</item>
        <item>Just Breathe:s110</item>
        <item>Amongst The Waves:s111</item>
        <item>Unthought Known:s112</item>
        <item>Supersonic:s113</item>
        <item>Speed of Sound:s114</item>
        <item>Force of Nature:s115</item>
        <item>The End:s116</item>
        
        <item>Angel:s209</item>
        <item>I Got ID:s201</item>
        <item>Long Road:s202</item>
        <item>Last Kiss:s203</item>
        <item>Soldier Of Love:s204</item>
        <item>Man Of The Hour:s205</item>
        <item>Santa Cruz:s206</item>
        <item>Golden State:s207</item>
        <item>Ol&#233;:s208</item>
        <item>Better Things:s210</item>
        <item>Devil Doll:s211</item>
        
        <item>Breath:s301</item>
        <item>State Of Love And Trust:s302</item>
        
        <item>Crazy Mary:s303</item>
        
        <item>All Night:s304</item>
        <item>Sad:s305</item>
        <item>Down:s306</item>
        <item>Hitchhiker:s307</item>
        <item>Don\'t Gimme No Lip:s308</item>
        <item>Alone:s309</item>
        <item>In The Moonlight:s310</item>
        <item>Education:s311</item>
        <item>Black, Red, Yellow:s312</item>
        <item>U:s313</item>
        <item>Leavin\' Here:s314</item>
        <item>Gremmie Out of Control:s315</item>
        <item>Whale Song:s316</item>
        <item>Undone:s317</item>
        <item>Hold On:s318</item>
        <item>Yellow Ledbetter:s319</item>
        <item>Fatal:s320</item>
        <item>Other Side:s321</item>
        <item>Hard To Imagine:s322</item>
        <item>Footsteps:s323</item>
        <item>Wash:s324</item>
        <item>Dead Man:s325</item>
        <item>Strangest Tribe:s326</item>
        <item>Drifting:s327</item>
        <item>Let Me Sleep:s328</item>
        <item>Sweet Lew:s329</item>
        <item>Dirty Frank:s330</item>
        <item>Brother:s331</item>
        <item>Bee Girl:s332</item>
        
        <item>Setting Forth:s333</item>
        <item>No Ceiling:s334</item>
        <item>Far Behind:s335</item>
        <item>Rise:s336</item>
        <item>Long Nights:s337</item>
        <item>Tuolumne:s338</item>
        <item>Hard Sun:s339</item>
        <item>Society:s340</item>
        <item>The Wolf:s341</item>
        <item>End Of The Road:s342</item>
        <item>Guaranteed:s343</item>
        
        <item>Better Days:s344</item>
        
        <item>Sleeping By Myself:s346</item>
        <item>Without You:s347</item>
        <item>More Than You Know:s348</item>
        <item>Goodbye:s349</item>
        <item>Broken Heart:s350</item>
        <item>Satellite:s351</item>
        <item>Longing To Belong:s352</item>
        <item>Hey Fahkah:s353</item>
        <item>You\'re True:s354</item>
        <item>Light Today:s355</item>
        <item>Sleepless Nights:s356</item>
        <item>Once In A While:s357</item>
        <item>Waving Palms:s358</item>
        <item>Tonight You Belong To Me:s359</item>
        <item>Dream A Little Dream:s360</item>
        
        <item>Skipping:s361</item>
		
		<item>Mind Your Manners:s363</item>
		<item>Sirens:s365</item>
	</string-array>
</resources>