<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item 
        android:id="@+id/action_album_info"
        android:title="@string/action_albumInfo"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_info" 
        android:visible="false"/>
    
    <item
        android:id="@+id/action_favorites"
        android:showAsAction="never"
        android:title="@string/action_favorites"/>
    
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_send_feedback"
        android:showAsAction="never"
        android:title="@string/action_sendFeedback"/>

</menu>
