<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/action_video"
        android:title="@string/action_showVideo"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_youtube"/>
    
    <item 
        android:id="@+id/action_font_size"
        android:title="@string/action_fontSize"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_font_size">
		
        <menu>
            <item 
                android:id="@+id/action_font_size_small"
                android:title="Small"
                android:onClick="setFontSize"/>
            <item 
                android:id="@+id/action_font_size_medium"
                android:title="Medium"
                android:onClick="setFontSize"/>
            <item 
                android:id="@+id/action_font_size_large"
                android:title="Large"
                android:onClick="setFontSize"/>
            
        </menu>
	
	</item>
    
    <item
        android:id="@+id/action_favorites"
        android:showAsAction="never"
        android:title="@string/action_favorites"/>
    
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_send_feedback"
        android:showAsAction="never"
        android:title="@string/action_sendFeedback"/>

</menu>
